fix side spacing

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1056,6 +1056,14 @@ textarea {
     padding-top: 0rem;
   }
 
+  .home__data {
+    width: 306px !important;
+  }
+
+  .home__img {
+    margin-left: 2.6rem;
+  }
+
   .container {
     margin-left: var(--mb-1);
     margin-right: var(--mb-1);
@@ -1152,7 +1160,7 @@ textarea {
 
   .home__data {
     grid-column: initial;
-    width: 250px;
+    width: 250px !important;
   }
 
   .home__img {
